# phantom-ethical-redteam

./: .gitignore  README.md  config.yaml  config.yaml.example  get.ps1  install.ps1  install.sh  pyproject.toml  requirements.txt
agent/: agent_client.py  claude_client.py  main.py  orchestrator.py
agent/memory/: __init__.py  mission_memory.py  persistence.py  timeline.py
agent/models/: __init__.py  events.py  findings.py  graph.py  plans.py  state.py
agent/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py
agent/reasoning/: __init__.py  context_manager.py  hypothesis_engine.py  planner.py  reflector.py  strategist.py  types.py
agent/tools/: __init__.py  bettercap.py  cleanup.py  cvss_scorer.py  ffuf.py  forge.py  graphql_enum.py  http_utils.py  hydra_tool.py  jwt_tool.py  logs_helper.py  metasploit.py  nmap_scan.py  nuclei.py  payloads.py  privesc.py  rate_limiter.py  read_log.py  recon.py  report.py  sandbox.py  scope_checker.py  sqlmap.py  (+7 more)
docs/: architecture-v3.md  backend-spec.md  code-audit.md  reasoning-engine-spec.md  security-spec.md
prompts/: forge_tool_prompt.txt  initial_mission.txt  system_prompt.txt  system_prompt_v3.txt
scopes/: current_scope.md.example
tests/: test_cvss_scorer.py  test_forge.py  test_memory.py  test_metasploit_safety.py  test_models_graph.py  test_models_plans.py  test_output_parsing.py  test_providers.py  test_reasoning_context_manager.py  test_reasoning_reflector.py  test_report.py  test_scope_checker.py  test_validation.py
web/: app.py
(+4 files in other folders)
